# isle-portable

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pylintrc  BUILD_DEPS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PORTS.md  PostbuildAction.cmake  README.md  pizza.isle.IslePortable.json  sdl3.patch  settings.gradle
CMake/: EmscriptenVersion.cmake  (+1 more)
CONFIG/qt/: AboutDlg.cpp  CMakeLists.txt  MainDlg.cpp  MainDlg.h  config.cpp  config.h  detectdx5.h
CONFIG/qt/res/: about.ui  config.qrc  maindialog.ui
CONFIG/vita/: CMakeLists.txt  exports.yml  iniparser_paf.patch
CONFIG/vita/cxml/: config_plugin.xml  settings.xml
CONFIG/vita/cxml/locale/: en.xml
CONFIG/vita/cxml/textures/: tex_settings_bg.gim
CONFIG/vita/include/: fios2.h  pafinc.h
CONFIG/vita/iniparser_paf/src/: dictionary.c  dictionary.h  iniparser.c  iniparser.h  pafstd.h
CONFIG/vita/src/: app.cpp  main.cpp  paf_runtime.cpp
CONFIG_vita/: CMakeLists.txt  CONFIG_vita.cmake
CONFIG_vita/ScePaf/: CMakeLists.txt  ScePaf.patch  emd2yml.py
CONFIG_vita/ScePaf/include/: declspec.h  map  math.h
CONFIG_vita/cxml/: config_plugin.xml
CONFIG_vita/src/: app.cpp  main.cpp
miniwin/: CMakeLists.txt  miniwin.cpp  miniwin.h  miniwin_d3d.cpp  miniwin_d3d.h  miniwin_ddraw.cpp  miniwin_ddraw.h  miniwin_direct.h  stdafx.cpp
miniwin/common/src/: d3drm.cpp  miniwin.cpp
miniwin/include/: miniwin_config.h  miniwin_d3d.h  miniwin_d3drm.h  miniwin_ddraw.h  miniwin_dinput.h  miniwin_process.h
miniwin/include/miniwin/: bitflags.h  d3d.h  d3drm.h  ddraw.h  dinput.h  mfc.h  miniwind3d.h  miniwindevice.h  windows.h
miniwin/minimfc/include/: minimfc.h
miniwin/minimfc/src/: minimfc.cpp
miniwin/miniwin/include/: bitflags.h  miniwin.h  miniwin_d3d.h  miniwin_d3drm.h  miniwin_ddraw.h  miniwin_direct.h
miniwin/miniwin/shaders/: gencshadersource.py
miniwin/miniwin/shaders/src/: SolidColor.frag.hlsl.json
miniwin/miniwin/src/: miniwin.cpp  miniwin_d3d.cpp  miniwin_d3drm.cpp  miniwin_d3drmdevice.cpp  miniwin_d3drmframe.cpp  miniwin_d3drmlight.cpp  miniwin_d3drmmesh.cpp  miniwin_d3drmtexture.cpp  miniwin_d3drmviewport.cpp  miniwin_ddclipper.cpp  miniwin_ddpalette.cpp  miniwin_ddraw.cpp  miniwin_ddsurface.cpp
miniwin/miniwin/src/include/: miniwin_d3drm_p.h  miniwin_d3drmdevice_p.h  miniwin_d3drmframe_p.h  miniwin_d3drmlight_p.h  miniwin_d3drmmesh_p.h  miniwin_d3drmobject_p.h  miniwin_d3drmtexture_p.h  miniwin_d3drmviewport_p.h  miniwin_d3drmvisual_p.h  miniwin_ddclipper_p.h  miniwin_ddpalette_p.h  miniwin_ddraw_p.h  miniwin_ddsurface_p.h  miniwin_p.h
miniwin/sdl3gpu/include/: miniwin_d3drm_sdl3gpu.h  miniwin_d3drmdevice_sdl3gpu.h  miniwin_d3drmframe_sdl3gpu.h  miniwin_d3drmlight_sdl3gpu.h  miniwin_d3drmmesh_sdl3gpu.h  miniwin_d3drmobject_sdl3gpu.h  miniwin_d3drmtexture_sdl3gpu.h  miniwin_d3drmviewport_sdl3gpu.h  miniwin_d3drmvisual_sdl3gpu.h  miniwin_ddpalette_sdl3gpu.h  miniwin_ddraw_sdl3gpu.h  miniwin_ddsurface_sdl3gpu.h
miniwin/sdl3gpu/shaders/src/: Common.hlsl  PositionColor.vert.hlsl  SolidColor.frag.hlsl
miniwin/sdl3gpu/src/: miniwin_d3drm.cpp  miniwin_d3drmdevice.cpp  miniwin_d3drmframe.cpp  miniwin_d3drmlight.cpp  miniwin_d3drmmesh.cpp  miniwin_d3drmtexture.cpp  miniwin_d3drmviewport.cpp  miniwin_ddpalette.cpp  miniwin_ddraw.cpp  miniwin_ddsurface.cpp  miniwn_d3drmmath.h
miniwin/src/d3drm/: d3drm.cpp  d3drmdevice.cpp  d3drmframe.cpp  d3drmlight.cpp  d3drmmesh.cpp  d3drmrenderer.cpp  d3drmtexture.cpp  d3drmviewport.cpp
miniwin/src/d3drm/backends/citro3d/: renderer.cpp  vshader.v.pica
miniwin/src/d3drm/backends/directx9/: actual.cpp  actual.h  renderer.cpp
miniwin/src/d3drm/backends/glide/: renderer.cpp
miniwin/src/d3drm/backends/gx2/: actual.h  renderer.cpp  renderer.ps  renderer.vs
miniwin/src/d3drm/backends/gxm/: Makefile  blit.color.frag.cg  blit.color.frag.gxp  blit.tex.frag.cg  blit.tex.frag.gxp  blit.vert.cg  blit.vert.gxp  clear.frag.cg  clear.frag.gxp  clear.vert.cg  clear.vert.gxp  gxm_context.cpp  gxm_context.h  gxm_memory.cpp  gxm_memory.h  gxm_renderer.cpp  image.frag.cg  incbin.h  main.frag.cg  main.frag.gxp  main.vert.cg  memory.cpp  memory.h  razor.h  renderer.cpp  tlsf.c  tlsf.h  utils.h
miniwin/src/d3drm/backends/opengl1/: actual.cpp  actual.h  renderer.cpp
miniwin/src/ddraw/: ddpalette.cpp  ddraw.cpp  ddsurface.cpp  framebuffer.cpp  framebuffer_vita.cpp
miniwin/src/internal/: d3drm_impl.h  d3drmdevice_impl.h  d3drmframe_impl.h  d3drmlight_impl.h  d3drmmesh_impl.h  d3drmobject_impl.h  d3drmrenderer.h  d3drmrenderer_citro3d.h  d3drmrenderer_directx9.h  d3drmrenderer_glide.h  d3drmrenderer_gx2.h  d3drmrenderer_gx2stub.cpp  d3drmrenderer_gxm.h  d3drmrenderer_opengl1.h  d3drmrenderer_opengl15.h  d3drmrenderer_opengles2.h  d3drmrenderer_opengles3.h  d3drmrenderer_palettesw.h  d3drmrenderer_sdl3gpu.h  d3drmrenderer_sdl3gpu_priv.h  d3drmrenderer_software.h  d3drmrenderer_webgl.h  d3drmtexture_impl.h  d3drmviewport_impl.h  d3drmvisual_impl.h  ddpalette_impl.h  ddraw_impl.h  ddsurface_impl.h  dummysurface_impl.h  framebuffer_impl.h  framebuffer_impl_vita.h  mathutils.h  meshutils.cpp  meshutils.h  miniwin.h  structs.h
miniwin/src/mfc/: mfc.cpp
miniwin/src/windows/: windows.cpp
packaging/: CMakeLists.txt
packaging/UWP/: CMakeLists.txt  IslePortable.pfx  Package.appxmanifest
packaging/ios/: CMakeLists.txt
packaging/ios/isle/: Info.plist.in  LaunchScreen.storyboard
packaging/linux/: CMakeLists.txt  isle_decomp.desktop.in  isle_decomp.metainfo.xml.in  isledecomp.desktop.in  isledecomp.metainfo.xml.in
packaging/linux/appimage/: AppRun  Build  CMakeLists.txt
packaging/linux/flatpak/: install_desktop_assets.sh  isledecomp.manifest.json.in  manifest.json.in  org.legoisland.Isle.json
packaging/macos/: CMakeLists.txt
packaging/macos/config/: AppIcon.icns  Info.plist.in
packaging/macos/isle/: AppIcon.icns  Info.plist.in
packaging/vita/sce_module/: libc.suprx  libfios2.suprx
packaging/wiiu/: app.xml  bootDrcTex.tga  bootSound.btsnd  bootTvTex.tga  icon.tga
packaging/wiiu/Legacy/: meta.xml
packaging/wiiu/Legacy/content/: renderer.gsh
(+623 files in other folders)
